<resources>
    <string name="app_name">Posterity</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment"></string>
    <string name="flux">Flux of Animals</string>
    <string name="num">Number of Animals</string>
    <string name="pace">Pace</string>
    <string name="heat">Heat</string>
    <string name="posterity">Posterity</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
