<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_main"
        app:layout_anchor="@+id/seekBar"
        app:layout_anchorGravity="bottom|center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posterity"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="top|center"
        android:textSize="40sp"/>


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="center" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="80dp"
        android:hint="@string/num"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="260dp"
        android:hint="@string/flux"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="72dp"
        android:layout_height="41dp"
        android:layout_above="@id/seekBar2"
        android:text="@string/heat"
        app:layout_anchor="@+id/seekBar2"
        app:layout_anchorGravity="top|center"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="66dp"
        android:layout_height="51dp"
        android:text="@string/pace"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>